{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 10,
  "lineage": "0b1a76a0-dbb4-34ca-ed2f-06e9dc4fce08",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "practico-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0edfbdc167720d490",
            "id": "rtb-0edfbdc167720d490",
            "owner_id": "556754989121",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0660f704f5fe7bf33",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "practico-default-route"
            },
            "vpc_id": "vpc-06b07a4b304e65df9"
          },
          "dependencies": [
            "aws_internet_gateway.practico-gateway",
            "aws_vpc.practico-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-practico-Wireless",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:556754989121:instance/i-07365aa9bafc42ccb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07365aa9bafc42ccb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ec38f39c2c77bfe2",
            "private_dns": "ip-172-16-1-219.ec2.internal",
            "private_ip": "172.16.1.219",
            "public_dns": "ec2-3-226-255-46.compute-1.amazonaws.com",
            "public_ip": "3.226.255.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07b5b37823d09c276",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016d93607e988e268",
            "tags": {
              "Name": "terraform-practico-Wireless"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e1f49cfa653c968e"
            ]
          },
          "dependencies": [
            "aws_security_group.practico",
            "aws_subnet.practico-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "practico-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556754989121:internet-gateway/igw-0660f704f5fe7bf33",
            "id": "igw-0660f704f5fe7bf33",
            "owner_id": "556754989121",
            "tags": {
              "Name": "practico-gateway"
            },
            "vpc_id": "vpc-06b07a4b304e65df9"
          },
          "dependencies": [
            "aws_vpc.practico-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "practico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556754989121:security-group/sg-0e1f49cfa653c968e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1f49cfa653c968e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "practico",
            "name_prefix": "",
            "owner_id": "556754989121",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06b07a4b304e65df9"
          },
          "dependencies": [
            "aws_vpc.practico-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "practico-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556754989121:subnet/subnet-016d93607e988e268",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-016d93607e988e268",
            "map_public_ip_on_launch": true,
            "owner_id": "556754989121",
            "tags": {
              "Name": "practico-subnet-terraform"
            },
            "vpc_id": "vpc-06b07a4b304e65df9"
          },
          "dependencies": [
            "aws_vpc.practico-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "practico-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556754989121:vpc/vpc-06b07a4b304e65df9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0266e83793ed19a60",
            "default_route_table_id": "rtb-0edfbdc167720d490",
            "default_security_group_id": "sg-0d608165e2c3bb5c5",
            "dhcp_options_id": "dopt-d4b52dae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06b07a4b304e65df9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0edfbdc167720d490",
            "owner_id": "556754989121",
            "tags": {
              "Name": "VPC_ej_Terraform"
            }
          }
        }
      ]
    }
  ]
}